[gd_scene load_steps=3 format=3 uid="uid://bqxerlcewoj1c"]

[ext_resource type="Script" path="res://player/player_components/PowerupManager.gd" id="1_eb5ym"]

[sub_resource type="CircleShape2D" id="CircleShape2D_xvkyw"]
radius = 16.0

[node name="PowerupManager" type="Area2D"]
collision_layer = 0
collision_mask = 32
monitorable = false
script = ExtResource("1_eb5ym")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_xvkyw")

[node name="Invulnerability" type="Timer" parent="."]
wait_time = 7.5
one_shot = true

[node name="Attack" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[node name="Coffee" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[connection signal="timeout" from="Invulnerability" to="." method="_on_invulnerability_timeout"]
[connection signal="timeout" from="Attack" to="." method="_on_attack_timeout"]
[connection signal="timeout" from="Coffee" to="." method="_on_coffee_timeout"]
